--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+  font-family: "Garamond", sans-serif;
+  color: #4444;
 }
 
 a {
@@ -317,14 +317,14 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-1.jpg") top right;
   background-size: cover;
   position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.65);
+  background: rgb(0, 0, 0, 0.65);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -410,7 +410,7 @@ section {
 }
 
 .section-bg {
-  background-color: white;
+  background-color: orchid;
 }
 
 .section-title {
@@ -867,7 +867,7 @@ section {
 --------------------------------------------------------------*/
 .portfolio #portfolio-flters {
   list-style: none;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .portfolio #portfolio-flters li {
